[package]
name = "scru128-test"
version = "0.3.0"
authors = ["LiosK <contact@mail.liosk.net>"]
license = "Apache-2.0"
edition = "2021"
description = "SCRU128 Generator Tester"
repository = "https://github.com/scru128/gen_test"
categories = ["command-line-utilities", "development-tools"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
